Fix dark mode bug

--- a/webui/react/src/hooks/useModal/useModalHyperparameterSearch.module.scss
+++ b/webui/react/src/hooks/useModal/useModalHyperparameterSearch.module.scss
@@ -21,7 +21,13 @@
     padding: 16px;
     
     :global(.ant-form-item) { margin: 0; }
-    :global(.ant-input-number) { width: 100%; }
+    :global(.ant-input-number) {
+      width: 100%;
+
+      &:global(.ant-input-number-status-error) {
+        background-color: inherit;
+      }
+    }
     .fullWidth {
       width: 100%;
     }
